# gadget

./: .gitignore  CMakeLists.txt  LICENSE  README.md  embed.py  inspect.cpp  lib.py  pyproject.toml
.github/workflows/: pypi.yml
gadget/: __init__.py  api.py  bert.py  cache.py  compute.py  constants.py  embed.py  ggml.py  layers.py  lib.py  llama.py  loader.py  model.py  shrek.py  tensor.py  testing.py  textgen.py  utils.py
gadget/libs/: _libggml.py  _libllama.py  constants.py  general.py
gadget/models/: bert.py  cache.py  layers.py  llama.py
scripts/: test_basic.py  test_bert.py  test_compute.py  test_llama.py  test_mem.py  test_model.py  test_textgen.py
